@@ -1,3 +1,8 @@
+2004-12-29  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Compilation): New section, describing compilation of
+	remote files.
+
 2004-12-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.46 released.
